// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeatTooltip should match snapshot when has children 1`] = `
.grxSlK.open-enter .c0.open-enter:before,
.grxSlK.open-appear,
.grxSlK.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 grxSlK"
  direction="bottom"
>
  <div
    className="krQPGk"
    size="large"
  >
    <div
      className="chFKRM"
    >
      <div
        className="ksuVUq"
        size="large"
      >
        Sec
      </div>
      <div
        className="jrDrcJ"
        size="large"
      >
        B
      </div>
    </div>
    <div
      className="chFKRM"
    >
      <div
        className="ksuVUq"
        size="large"
      >
        Row
      </div>
      <div
        className="jrDrcJ"
        size="large"
      >
        5
      </div>
    </div>
    <div
      className="chFKRM"
    >
      <div
        className="ksuVUq"
        size="large"
      >
        Seat
      </div>
      <div
        className="jrDrcJ"
        size="large"
      >
        25
      </div>
    </div>
  </div>
  <div
    className="eVjFSs"
    size="large"
  >
    <div>
      test
    </div>
  </div>
</div>
`;

exports[`SeatTooltip should match snapshot when no children and dark 1`] = `
.grxSlK.open-enter .c0.open-enter:before,
.grxSlK.open-appear,
.grxSlK.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 grxSlK"
  direction="bottom"
>
  <div
    className="fShvgq"
    size="large"
  >
    <div
      className="chFKRM"
    >
      <div
        className="ksuVUq"
        size="large"
      >
        Sec
      </div>
      <div
        className="jrDrcJ"
        size="large"
      >
        
      </div>
    </div>
    <div
      className="chFKRM"
    >
      <div
        className="ksuVUq"
        size="large"
      >
        Row
      </div>
      <div
        className="jrDrcJ"
        size="large"
      >
        5
      </div>
    </div>
    <div
      className="chFKRM"
    >
      <div
        className="ksuVUq"
        size="large"
      >
        Seat
      </div>
      <div
        className="jrDrcJ"
        size="large"
      >
        25
      </div>
    </div>
  </div>
</div>
`;

exports[`SeatTooltip should match snapshot when small and dark 1`] = `
.grxSlK.open-enter .c0.open-enter:before,
.grxSlK.open-appear,
.grxSlK.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 grxSlK"
  direction="bottom"
>
  <div
    className="PUrql"
    size="small"
  >
    <div
      className="chFKRM"
    >
      <div
        className="vsgKP"
        size="small"
      >
        Sec
      </div>
      <div
        className="dyJniy"
        size="small"
      >
        B
      </div>
    </div>
    <div
      className="chFKRM"
    >
      <div
        className="vsgKP"
        size="small"
      >
        Row
      </div>
      <div
        className="dyJniy"
        size="small"
      >
        5
      </div>
    </div>
    <div
      className="chFKRM"
    >
      <div
        className="vsgKP"
        size="small"
      >
        Seat
      </div>
      <div
        className="dyJniy"
        size="small"
      >
        25
      </div>
    </div>
  </div>
  <div
    className="ieNCtg"
    size="small"
  >
    <div>
      test
    </div>
  </div>
</div>
`;
